landing page wrapper fix - overflow hidden added back

--- a/client/js/app.scss
+++ b/client/js/app.scss
@@ -1,3 +1,7 @@
+html {
+	background-color: white;
+}
+
 .body-wrap {
 	max-width: 1200px;
 	margin: 0 auto;
