--- a/client/js/aurous_productdetail/aurous_productdetail.scss
+++ b/client/js/aurous_productdetail/aurous_productdetail.scss
@@ -27,14 +27,6 @@
 
 }
 
-/*.drop-1 {
-	background-image: url('drop1.png');
-	background-size: 100%;
-	width: 400px;
-	height: 300px;
-	z-index: -999;
-}*/
-
 .aurousproduct_detail {
 	width: 100%;
 }
