--- a/client/js/aurous_products/aurous_products.scss
+++ b/client/js/aurous_products/aurous_products.scss
@@ -74,7 +74,7 @@
 	z-index: -9999;
 	display: inline-block;
 	// for footer and spacing 
-	margin-bottom: 685px;
+	margin-bottom: 545px;
 }
 
 .aurous_button {
